--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -23,6 +23,9 @@ body {
   padding: 0;
   overflow-y: scroll;
   overflow-x: hidden;
+  background-color: #0a192f;
+  color: #8892b0;
+  // color: #64ffda;
 }
 
 .section {
@@ -43,13 +46,13 @@ body {
 .primary-btn {
   margin: 10px;
   padding: 10px;
-  background-color: black;
-  color: white;
-  border: 0px;
-  transition: all 0.2s ease-in-out;
+  border: 1px solid #64ffda;
+  border-radius: 5px;
+  color: #64ffda;
   text-decoration: none;
   cursor: pointer;
   &:hover {
-    transform: scale(1.1);
+    transform: scale(3.1);
+    background-color: #64ffda1a;
   }
 }
