--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -6,13 +6,14 @@
   justify-content: space-between;
   .name {
     font-weight: 600;
+    color: white;
   }
   .links-wrapper {
     button {
       text-decoration: none;
       padding: 10px;
       font-family: "Open Sans";
-      opacity: 0.6;
+      color: #8892b0;
       transition: all 0.2s ease-in-out;
       font-size: 12px;
       background-color: transparent;
@@ -20,11 +21,25 @@
       border: 0px;
       cursor: pointer;
       &:hover {
-        opacity: 1;
+        color: #64ffda;
       }
     }
     .active {
       color: black;
     }
+    .resume {
+      color: #64ffda;
+      border: 1px solid #64ffda;
+      margin: 0 10px;
+      border-radius: 5px;
+      &:hover {
+        background-color: #64ffda1a;
+      }
+    }
   }
+}
+
+.svg:hover {
+  cursor: pointer;
+  fill: #64ffda1a;
 }
