--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -27,6 +27,7 @@
 
     h1 {
       font-size: 3rem;
+      color: white;
       line-height: 20px;
       @include media(">=tablet", "<desktop") {
         text-align: center;
@@ -35,6 +36,28 @@
     p {
       @include media(">=tablet", "<desktop") {
         text-align: center;
+      }
+    }
+    ul {
+      display: grid;
+      grid-template-columns: repeat(2, minmax(140px, 200px));
+      gap: 0px 10px;
+      padding: 0px;
+      margin: 20px 0px 0px;
+      overflow: hidden;
+      list-style: none;
+    }
+    li {
+      position: relative;
+      margin-bottom: 10px;
+      padding-left: 20px;
+      font-size: 0.875rem;
+
+      &::before {
+        content: "▹";
+        position: absolute;
+        left: 0px;
+        color: #64ffda;
       }
     }
   }
