--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -24,6 +24,7 @@
       font-size: 4rem;
       text-align: center;
       line-height: 20px;
+      color: #ccd6f6;
       @include media(">=phone", "<lgphone") {
         font-size: 1.5rem;
         line-height: 10px;
