--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -4,15 +4,15 @@
 
 // Atoms
 @import "./card.scss";
+@import "./big-card.scss";
 
 // Components
 @import "./navbar.scss";
 @import "./header.scss";
 @import "./work.scss";
 @import "./about.scss";
-@import "./skills.scss";
-@import "./promotion.scss";
 @import "./footer.scss";
+@import "./big-project.scss";
 
 * {
   font-family: "Montserrat";
@@ -23,9 +23,14 @@ body {
   padding: 0;
   overflow-y: scroll;
   overflow-x: hidden;
-  background-color: #0a192f;
+  // background-color: #0a192f;
+  background-image: url("../images/test-background.jpg");
+  background-repeat: repeat;
   color: #8892b0;
-  // color: #64ffda;
+}
+
+a {
+  text-decoration: none;
 }
 
 .section {
@@ -57,9 +62,10 @@ body {
   }
 }
 
-.footer-icon {
+.link-icon {
   height: 32px;
   width: 32px;
+  stroke: #8892b0;
   &:hover {
     stroke: #64ffda;
   }
