--- a/src/styles/big-card.scss
+++ b/src/styles/big-card.scss
@@ -72,9 +72,11 @@
       justify-content: flex-start;
       list-style: none;
       padding: 0;
+      margin-top: 40px;
     }
     li {
       margin-right: 10px;
+      font-size: 0.875rem;
     }
   }
 }
