--- a/src/styles/big-card.scss
+++ b/src/styles/big-card.scss
@@ -4,7 +4,9 @@
   border-radius: 5px;
   background-color: #ffffff0d;
   box-shadow: 0 10px 30px -15px #020c1bb3;
-  margin: 100px 0;
+  margin: 100px auto;
+  height: 200px;
+  width: 60%;
 
   @include media(">=phone", "<lgphone") {
     flex-direction: column;
@@ -18,6 +20,8 @@
 
   .image-wrapper {
     width: 40%;
+    display: grid;
+    place-items: center;
     @include media(">=phone", "<lgphone") {
       width: 100%;
     }
@@ -29,9 +33,8 @@
     }
     img {
       object-fit: contain;
-      width: 100%;
-      height: 100%;
-      max-height: 300px;
+      max-height: 180px;
+      border-radius: 10px;
     }
   }
 
@@ -39,6 +42,7 @@
     padding: 0 20px;
     width: 60%;
     color: #8892b0;
+    position: relative;
 
     @include media(">=phone", "<lgphone") {
       padding: 20px 0;
@@ -56,6 +60,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      height: 10%;
       svg {
         width: 24px;
         height: 24px;
@@ -72,7 +77,8 @@
       justify-content: flex-start;
       list-style: none;
       padding: 0;
-      margin-top: 40px;
+      position: absolute;
+      bottom: 0;
     }
     li {
       margin-right: 10px;
