--- a/src/styles/big-project.scss
+++ b/src/styles/big-project.scss
@@ -1,4 +1,4 @@
-.invoice-wrapper {
+.project-wrapper {
   max-width: 700px;
   width: 80vw;
   margin-top: 10vh;
@@ -27,6 +27,7 @@
   img {
     max-width: 100%;
     margin: 10px;
+    object-fit: contain;
   }
   ul {
     position: relative;
