--- a/src/styles/big-card.scss
+++ b/src/styles/big-card.scss
@@ -22,6 +22,7 @@
     width: 40%;
     display: grid;
     place-items: center;
+    cursor: pointer;
     @include media(">=phone", "<lgphone") {
       width: 100%;
     }
